k8s/logging/elasticsearch/elastic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: logging
spec:
  rules:
    - host: elastic.msv-tech.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-es-http
                port:
                  number: 9200
